# ProjectValera_2

./: .flake8  README.md  index.html  keys.env  pyproject.toml
src/: decorators.py  external_api.py  file_readers.py  generators.py  logging_config.py  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_file_readers.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
